--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "postinstall":"ng build --prod"
+    "postinstall": "ng build --prod"
   },
   "private": true,
   "dependencies": {
@@ -25,6 +25,7 @@
     "express": "^4.17.1",
     "jsonwebtoken": "^8.5.1",
     "mongodb": "^3.3.0-beta2",
+    "nodemailer": "^6.3.0",
     "path": "^0.12.7",
     "rxjs": "~6.4.0",
     "tslib": "^1.9.0",
@@ -52,8 +53,8 @@
     "tslint": "~5.15.0",
     "typescript": "~3.4.3"
   },
-  "engines":{
-    "node":"10.16.0",
-    "npm":"6.9.0"
+  "engines": {
+    "node": "10.16.0",
+    "npm": "6.9.0"
   }
 }
